--- a/assets/setup.html
+++ b/assets/setup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <title>Second Crack Setup</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Scan for devices or set up your device manually</h1>
     </body>
 </html>
