--- a/assets/main.html
+++ b/assets/main.html
@@ -12,10 +12,17 @@
             document.write(process.versions.node)</script
         >, Chromium
         <script>
-            document.write(process.versions.chrome)</script
-        >, and Electron!
+            document.write(process.versions.chrome)
+        </script>
+        , and Electron!
         <script>
             document.write(process.versions.electron)
+        </script>
+        <script>
+            const ipc = require('electron').ipcRenderer
+            ipc.on('device-received', (event, device) => {
+                console.log(device)
+            })
         </script>
     </body>
 </html>
